Resources/Adding StdDev and BoxPlots/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_opa_1_altergo.txt
[kernel] Parsing opa_1_rte.c (with preprocessing)
[kernel] opa_1_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing opa_1.c (with preprocessing)
  3     [kernel] opa_1.c:2: User Error:
[kernel] Frama-C aborted: invalid user input.
